[tool.poetry]
name = "repl_python3_Auxiliator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
gTTS = "^2.2.3"
ipython = "^7.31.0"
nasapy = "^0.2.7"
pandas = "^1.3.5"
replit = "^3.2.4"
Flask = "^2.0.2"
praw = "^7.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
